--- a/MyKTGG/GoogleService-Info.plist
+++ b/MyKTGG/GoogleService-Info.plist
@@ -13,21 +13,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>trushkovsky.authKTGG</string>
+	<string>AlexTrushkovsky.MyKTGG</string>
 	<key>PROJECT_ID</key>
 	<string>ktggauth</string>
 	<key>STORAGE_BUCKET</key>
 	<string>ktggauth.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:553926416029:ios:8432116d33148837eae674</string>
 	<key>DATABASE_URL</key>
