added new logic of lessons and changes, fixed changes, fixed some bugs, added main screen last notifications view, added group oriented push notifications

--- a/MyKTGG/Helpers/Info.plist
+++ b/MyKTGG/Helpers/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Мій КТГГ</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -75,6 +77,12 @@
 		<string>SourceSansPro-Black.ttf</string>
 		<string>SourceSansPro-ExtraLight.ttf</string>
 		<string>SourceSansPro-SemiBold.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
