--- a/MyKTGG.xcodeproj/xcshareddata/xcschemes/MyKTGG.xcscheme
+++ b/MyKTGG.xcodeproj/xcshareddata/xcschemes/MyKTGG.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6E7625692403F6C100C68C7F"
-               BuildableName = "&#x41c;&#x456;&#x438;&#x306; &#x41a;&#x422;&#x413;&#x413;.app"
+               BuildableName = "My KTGG.app"
                BlueprintName = "MyKTGG"
                ReferencedContainer = "container:MyKTGG.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6E7625692403F6C100C68C7F"
-            BuildableName = "&#x41c;&#x456;&#x438;&#x306; &#x41a;&#x422;&#x413;&#x413;.app"
+            BuildableName = "My KTGG.app"
             BlueprintName = "MyKTGG"
             ReferencedContainer = "container:MyKTGG.xcodeproj">
          </BuildableReference>
@@ -69,7 +69,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6E7625692403F6C100C68C7F"
-            BuildableName = "&#x41c;&#x456;&#x438;&#x306; &#x41a;&#x422;&#x413;&#x413;.app"
+            BuildableName = "My KTGG.app"
             BlueprintName = "MyKTGG"
             ReferencedContainer = "container:MyKTGG.xcodeproj">
          </BuildableReference>
