fixed bug when push notifications dont work cause brackets dont cofirm fcm topics rules; remade logic of timetable lesson deskpiption string parsing; tag of bottomSheetIcon inside title of Push moved into data of it; fixed bug, where getting outdated news on refresh cause it cached

--- a/MyKTGG/Helpers/Info.plist
+++ b/MyKTGG/Helpers/Info.plist
@@ -72,7 +72,7 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>Потрібен дозвіл, щоб зробити фото вашого облікового запису</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SourceSansPro-Regular.ttf</string>
